more crud assignment completed

--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,11 +1,3 @@
-<!-- <h1>Editing Question</h1>
-
-<%= render 'form', question: @question %>
-
-<%= link_to 'Show', @question %> |
-<%= link_to 'Back', questions_path %>
- -->
-
 <h1>Edit Question</h1>
  
  <div class="row">
@@ -29,6 +21,10 @@
        </div>
        <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
+       </div>
+       <div class="form-group">
+         <%= f.label :resolved %>
+         <%= f.check_box("resolved", {}, "1", "0") %>
        </div>
      <% end %>
    </div>
