--- a/app/views/sponsored_posts/edit.html.erb
+++ b/app/views/sponsored_posts/edit.html.erb
@@ -20,6 +20,10 @@
          <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter sponsored post body" %>
        </div>
        <div class="form-group">
+         <%= f.label :price %>
+         <%= f.number_field :price, rows: 8, class: 'form-control', placeholder: "Enter sponsered post price" %>
+       </div>
+       <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
      <% end %>
