favorites checkpoint completed

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -35,7 +35,7 @@
          </small>
        </div>
      </h3>
-     <% if current_user %>
+     z<% if current_user %>
        <%= render partial: 'favorites/favorite', locals: { post: @post } %>
      <% end %>
    </div>
